2002-05-25  David Bordoley <bordoley@msu.edu>

	*src/nautilus-window-menus.c
	*src/nautilus-shell-ui.xml
	Changed names of callbacks for "backgrounds and emblems" and preferences
	to make them more descriptive.

	*src/nautilus-windows-menus.c
	Removed unused code relating to eazel customer feedback
	Use stock clear button in the clear history dialog

Thu May 30 13:14:58 2002  George Lebl <jirka@5z.com>

	* src/file-manager/fm-desktop-icon-view.c,
	  src/file-manager/nautilus-desktop-icon-view-ui.xml:  Rename
	  the New Launcher verb to "New Launcher Desktop" since it's sort
	  of a more special case then the one in directory-view.  This
	  fixes the issue with the fix of #72715

2002-05-30  Damon Chaplin  <damon@ximian.com>

	* src/nautilus-property-browser.c: use a separate pointer for each
	of the patterns/emblems/color dialogs, and make them not modal.

	It was using 'property_browser->details->category' in some of the
	callbacks, which meant it didn't work if the user had switched to one
	of the other patterns/colors/emblems pages. I hard-coded "patterns"
	and "emblems" instead. Fixes bug #80683.

2002-05-30  Damon Chaplin  <damon@ximian.com>

	* components/music/nautilus-music-view.c: removed PLAYER_NEXT state,
	as it wasn't really necessary and was a bit confusing.
	(selection_changed): updated to make sure we update the displayed
	song title.
	(play_status_display): changed the code to move to the next track,
	as we don't use PLAYER_NEXT any more.
	(play_current_file): use esdout_can_play() to check if we can connect
	to esd.
	(go_to_previous_track): use 3000 instead of 300. (1000 is 1 second,
	see play_status_display()).
	(get_player_state): just return the state. Don't call esdout_playing().

	* components/music/esd-audio.c (esdout_can_play): added new function
	to check if we can connect to esd.
	(esdout_playing): updated this so it only checks if we are currently
	playing a track. It doesn't try to connect to esd any more.

	Fixes bug #79231.
